tdf#90946: sw: ODF import: ignore invalid gradient-name if style SOLID

The bugdoc has a fill-gradient-name that refers to a non-existent
gradient and also draw:fill="solid"; handle this combination without
exception.

Change-Id: I2c912b28a6b1550e2e4c6c71ff8889ae1779c618
(cherry picked from commit 00eab70295cbce40368d57224c3f51c6e5f2457e)
Reviewed-on: https://gerrit.libreoffice.org/15866
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>